Change the header

--- a/HOBBY-Project-SheCodes-Add-On.html
+++ b/HOBBY-Project-SheCodes-Add-On.html
@@ -411,7 +411,7 @@
       <div class="header-contents">
         <h2>MY HOBBY</h2>
         <hr />
-        <h1>TRAVELING</h1>
+        <h1>TRAVELING AROUND THE WORLD</h1>
         <div class="contents">
           <h3>REASONS TO TRAVEL</h3>
           <hr />
